# yt-quick-insights

./: LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yaml
tests/: test_cli.py  test_task.py  test_utils.py  test_youtube_transcript.py
yt_quick_insights/: __init__.py  cli.py  config.py  prompt.py  quick_insight_helper.py  quick_insights.py  task.py  utils.py  youtube_playlist.py  youtube_transcript.py
yt_quick_insights/cli/: cli.py  helper.py  typer_args.py  validate.py
yt_quick_insights/data/: deep_dive.yml  extraction_methods.yml  playlist_prompt.yml  prompt.yml  task_details.yml
yt_quick_insights/frontend/: __init__.py  caching.py  st_helper.py  streamlit_app.py
yt_quick_insights/frontend/static/: styles.css
yt_quick_insights/frontend/views/: components.py  contact.py  deep_dive.py  env_file.py  extraction_methods.py  homepage.py  playlist_insights.py  task_details.py  video_insights.py  yaml_file.py
